src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>AdminURL__c</fullName>
        <label>AdminURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AlertsEmail__c</fullName>
        <label>AlertsEmail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AlertsPhone__c</fullName>
        <label>AlertsPhone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AutoTopup__c</fullName>
        <label>AutoTopup</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Funded_10000__c</fullName>
        <label>Campaign - Funded &gt; 10000</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Campaign_No_Preference__c</fullName>
        <label>Campaign - No Preference</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Comment_to_Sensitive_Account__c</fullName>
        <label>Comment to Sensitive Account</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CompanyNotes__c</fullName>
        <label>CompanyNotes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Confirm_sensitive_with_customer__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Confirm sensitive with customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Court_Claim_Number__c</fullName>
        <label>Court Claim Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DCA_Id__c</fullName>
        <externalId>true</externalId>
        <label>DCA Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMC_Id__c</fullName>
        <externalId>true</externalId>
        <label>DMC Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Date_Of_Birth__c</fullName>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DaysSinceRegistration__c</fullName>
        <formula>TODAY() - RegDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DaysSinceRegistration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deceased_Flag__c</fullName>
        <formula>If(Deceased__c = &quot;Deceased&quot; ,IMAGE(&quot;/resource/Deceased&quot;,&quot;Deceased&quot;,30,450),IMAGE(&quot;/resource/DeceasedNone&quot;,&quot;None&quot;,30,450))</formula>
        <label>Deceased Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deceased__c</fullName>
        <label>Deceased</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailAsText__c</fullName>
        <label>EmailAsText</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Usage__c</fullName>
        <label>Expected Usage</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fee__c</fullName>
        <label>Fee</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FeesUnpaid__c</fullName>
        <label>FeesUnpaid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FirstFunding__c</fullName>
        <label>FirstFunding</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FirstNameforEmail__c</fullName>
        <formula>if(isblank(KyliePreferredName__c),PreferredName__c,KyliePreferredName__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FirstNameforEmail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FundingSinceLastCampaignCall__c</fullName>
        <label>FundingSinceLastCampaignCall</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HomePhone__c</fullName>
        <label>HomePhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>HouseNumber__c</fullName>
        <label>HouseNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HousePrice__c</fullName>
        <description>This is data from Matt P&apos;s work.</description>
        <label>HousePrice</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Is_Sensitive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is_Sensitive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KyliePreferredName__c</fullName>
        <label>KyliePreferredName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastCampaignCall__c</fullName>
        <label>LastCampaignCall</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LatestFundingAmount__c</fullName>
        <label>Latest Funding Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LatestFunding__c</fullName>
        <label>LatestFunding</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LatestLogin__c</fullName>
        <label>LatestLogin</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LatestWithdrawal__c</fullName>
        <label>LatestWithdrawal</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LentLast3Days__c</fullName>
        <label>LentLast3Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LentOut__c</fullName>
        <label>LentOut</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LimitValue__c</fullName>
        <label>LimitValue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LoginsLast90__c</fullName>
        <label>LoginsLast90</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaxLending__c</fullName>
        <label>MaxLending</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MemberID__c</fullName>
        <externalId>true</externalId>
        <label>MemberID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Member_Authority_2__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Member Authority 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Id</field>
                <operation>equals</operation>
                <valueField>Case.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Accounts (Member Authority 2)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Member_Authority_3__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Member Authority 3</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Accounts (Member Authority 3)</relationshipLabel>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Member_Authority__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Member Authority 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Id</field>
                <operation>equals</operation>
                <valueField>Case.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Member_PK__c</fullName>
        <description>Member PK from the Member Table</description>
        <externalId>true</externalId>
        <label>Member_PK</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Memorable_Word__c</fullName>
        <label>Memorable Word</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MobilePhone__c</fullName>
        <label>MobilePhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>NeverContact__c</fullName>
        <label>NeverContact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewsletterEmail__c</fullName>
        <label>NewsletterEmail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Member_Authority__c</fullName>
        <label>Non-Member Authority</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NotOffered__c</fullName>
        <label>NotOffered</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OnOffer__c</fullName>
        <label>OnOffer</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PendingLoans__c</fullName>
        <label>PendingLoans</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PhonePreference__c</fullName>
        <label>PhonePreference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PostTown__c</fullName>
        <label>Post Town</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postcode__c</fullName>
        <label>Postcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreferredName__c</fullName>
        <label>PreferredName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queued__c</fullName>
        <label>Queued</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RegDate__c</fullName>
        <label>RegDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RegistrationState__c</fullName>
        <label>RegistrationState</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remove_from_Mailing_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remove from Mailing List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReserveValue__c</fullName>
        <label>ReserveValue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__Override_DupeCatcher__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Override DupeCatcher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SecureAdmin__c</fullName>
        <formula>substitute(AdminURL__c,&quot;http&quot;,&quot;https&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SecureAdmin</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <description>Segments for VIP clients (Key Accounts) and prospects</description>
        <label>Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VIP at Risk</fullName>
                </value>
                <value>
                    <fullName>VIP Top</fullName>
                </value>
                <value>
                    <fullName>VIP Current</fullName>
                </value>
                <value>
                    <fullName>VIP Community</fullName>
                </value>
                <value>
                    <fullName>VIP Current – low potential</fullName>
                </value>
                <value>
                    <fullName>Non VIP Community</fullName>
                </value>
                <value>
                    <fullName>Non VIP Potential</fullName>
                </value>
                <value>
                    <fullName>Institutions</fullName>
                </value>
                <value>
                    <fullName>Non VIP Nearly</fullName>
                </value>
                <value>
                    <fullName>Over £100K</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SensitiveType__c</fullName>
        <label>Sensitive Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Financial Difficulties</fullName>
                </value>
                <value>
                    <fullName>Debit Relief Order</fullName>
                </value>
                <value>
                    <fullName>Protected Trust Deed</fullName>
                </value>
                <value>
                    <fullName>Bankruptcy</fullName>
                </value>
                <value>
                    <fullName>IVA</fullName>
                </value>
                <value>
                    <fullName>DAS</fullName>
                </value>
                <value>
                    <fullName>Mental Health</fullName>
                </value>
                <value>
                    <fullName>Deceased</fullName>
                </value>
                <value>
                    <fullName>Vunerable Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street1__c</fullName>
        <label>Street1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street2__c</fullName>
        <label>Street2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TellAFriendURL__c</fullName>
        <label>TellAFriendURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <label>Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Third_Party_Authority__c</fullName>
        <inlineHelpText>Enter the name of any third party authority on the account</inlineHelpText>
        <label>Third Party Authority</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalFundedLast30Days__c</fullName>
        <label>TotalFundedLast30Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalFunded__c</fullName>
        <label>TotalFunded</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalWithdrawnLast365__c</fullName>
        <label>TotalWithdrawnLast365</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalWithdrawn__c</fullName>
        <label>TotalWithdrawn</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ZopaTotal__c</fullName>
        <formula>OnOffer__c  +  LentOut__c + NotOffered__c + PendingLoans__c + Queued__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ZopaTotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Zopa_Employee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Zopa Employee</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>MemberID__c</columns>
        <columns>Expected_Usage__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>DMCS</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.DMC</value>
        </filters>
        <label>DMCS</label>
        <sharedTo>
            <role>Collections_and_Recoveries_Team_Lead</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Email__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <recordTypes>
        <fullName>Broker</fullName>
        <active>true</active>
        <description>Broker accounts for use with Underwriting</description>
        <label>Broker</label>
    </recordTypes>
    <recordTypes>
        <fullName>Business_Account</fullName>
        <active>true</active>
        <label>Business Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>DCA</fullName>
        <active>true</active>
        <label>DCA</label>
    </recordTypes>
    <recordTypes>
        <fullName>DMC</fullName>
        <active>true</active>
        <label>DMC</label>
    </recordTypes>
    <recordTypes>
        <fullName>X3rd_Party_Contact</fullName>
        <active>true</active>
        <description>Account record for 3rd parties</description>
        <label>3rd Party Contact</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>DCA_Id_is_required_on_DCA_Account</fullName>
        <active>true</active>
        <errorConditionFormula>AND(RecordType.DeveloperName = &apos;DCA&apos;,
   ISBLANK(DCA_Id__c))</errorConditionFormula>
        <errorDisplayField>DCA_Id__c</errorDisplayField>
        <errorMessage>DCA Id is required on DCA Account</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MemberId_is_required_on_Customer_Account</fullName>
        <active>true</active>
        <errorConditionFormula>AND(RecordType.DeveloperName = &apos;Business_Account&apos;,
   ISBLANK(MemberID__c))</errorConditionFormula>
        <errorDisplayField>MemberID__c</errorDisplayField>
        <errorMessage>MemberId is required on Customer Account</errorMessage>
    </validationRules>
</CustomObject>